# authProject

./: db.sqlite3  manage.py  pyproject.toml
authProject/: settings.py  urls.py
jwt_auth_api/: admin.py  apps.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
jwt_auth_api/migrations/: 0001_initial.py
